Níma and reactive example.